--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,47 @@
 body {
-    background-color:darkgray;
-    color:black
+    background-color:rgb(118, 101, 101);
+    color: rgb(2, 2, 71);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h1 {
+    font-weight: 700;
+    letter-spacing: 1.5px;
+    text-transform: uppercase;
+    color:hsl(204, 54%, 45%);
+    text-shadow: -1px 0px black, 0 1px black, 1px 0 black, 0 -1px black;
+   
+}
+
+h2 {
+    font-weight: 300;
+}
+
+#container {
+    height: 150px;
+    width: 100%;
+    border: 1px solid black;
+    position: relative;
+    background-color: blanchedalmond;
+}
+
+#label {
+    position: absolute;
+    top: -10px;
+    left: 20px;
+    height: 200px;
+    width: 400px;
+    background-color: pink;
+    border: 2px solid black;
+    text-align: center;
+}
+
+.col {
+    border: solid;
+    border-color: black;
+    border: width 1px;
+    align: left;
+            
 }
 
 /* 1.col style */
@@ -9,7 +50,7 @@ body {
 }
 /* 2.col style */
 .col:nth-of-type(2) {
-    background-color: chocolate;
+    background-image: url("");
 }
 /* 3.col style */
 .col:nth-of-type(3) {
