--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ h1 {
 
 .nav {
     text-align-last: right;
+    
 }
 
 .container {
@@ -25,12 +26,13 @@ h1 {
 }
 
 .col h2 {
-    font-family:fantasy;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    
     font-weight: 300;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
-    color: rgb(4, 6, 36);
+    color: rgb(16, 21, 88);
     text-transform: uppercase;
 }
 
@@ -39,6 +41,7 @@ p {
     margin-left: 20px;
     margin-right: 20px;
     margin-bottom: 50px;
+    
 }
 
 #container {
@@ -92,5 +95,6 @@ p {
     transition: all 0.5s ease;
     font-size: medium;
     font-weight: lighter;
+    
     
 }
